# HTTPResumer

./: .gitignore  CMakeLists.txt  Downloader.cpp  Downloader.h  LICENSE  README.md  config.h.in  main.cpp  utils.cpp  utils.h  version.h.in
tests/: CMakeLists.txt  test_downloader.cpp  test_utils.cpp
